--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/bg.jpg") top right no-repeat;
+  background: #040404 url("../img/bg11.jpg") top right no-repeat;
   background-size: 1158px 700px;
   left: 0;
   right: 0;
