--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/bg11.jpg") top right no-repeat;
-  background-size: 1158px 700px;
+  background: #040404 url("../img/bg11.png") top right no-repeat;
+  background-size: cover;
   left: 0;
   right: 0;
   top: 0;
