--- a/css/style.css
+++ b/css/style.css
@@ -591,7 +591,7 @@ section .container {
     line-height: 18px;
     font-size: 18px;
     font-weight: 600;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-family: "Poppins", sans-serif;
     color: #18d26e;
     margin-bottom: 10px;
