--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,19 @@ body::before {
     z-index: -1;
 }
 
+body::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
 @media (min-width: 1024px) {
     body::before {
         background-attachment: fixed;
