--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,16 @@ body::-webkit-scrollbar {
 }
  
 body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px black;
 }
  
 body::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
+  background-color: white;
   outline: 1px solid slategrey;
+}
+
+.scrollbar {
+    scrollbar-width: none;
 }
 
 @media (min-width: 1024px) {
